--- a/style.css
+++ b/style.css
@@ -81,3 +81,29 @@ li {
   color: #5B5EA6;
   display: inline-block;
 }
+
+ /* .div-list {
+  float: left;
+}
+
+#ul-container {
+  float: left;
+}
+
+#complete-container {
+ float:left;
+}  */
+
+#wrapper {
+  float: left;
+}
+
+#api-container {
+  height:400px;
+  width: 400px;
+  border: thick solid #0000FF;
+float: right;
+margin-right: 20px;
+text-align: center;
+
+}
